Dataset gen working and built basic MLP

--- a/code/KerasSandbox.ipynb
+++ b/code/KerasSandbox.ipynb
@@ -21,20 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import keras\n",
-    "from keras.preprocessing.text import Tokenizer"
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -50,8 +58,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP with concatenation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -61,40 +83,29 @@
      "output_type": "stream",
      "text": [
       "Loading data...\n",
-      "Data loaded.\n"
+      "Data loaded.\n",
+      "(819, 7, 3)\n",
+      "(819, 1)\n"
      ]
     }
    ],
    "source": [
-    "X_r, X_s, y = load_data(\"test\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from random import seed\n",
-    "from random import randint\n",
-    "from math import ceil\n",
-    "from math import log10\n",
+    "Xr, Xs, y = load_data(\"test\") # shape (samples, length, one-hot-size)\n",
     "\n",
-    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']"
+    "# if the regex one-hot vector is larger than the string vector\n",
+    "if Xr.shape[2] != Xs.shape[2]:\n",
+    "    Xs = np.concatenate((Xs, np.zeros((Xs.shape[0], Xs.shape[1], Xr.shape[2] - Xs.shape[2]))), axis=2)\n",
+    "\n",
+    "X = np.concatenate((Xr, Xs), axis=1)\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -103,140 +114,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2, 1], [1, 3], [2, 4]]\n",
-      "[3, 4, 6]\n"
+      "Epoch 1/20\n",
+      "548/548 [==============================] - 1s 970us/step - loss: 0.7245 - acc: 0.5091\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 2/20\n",
+      "548/548 [==============================] - 0s 43us/step - loss: 0.4577 - acc: 0.8832\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 3/20\n",
+      "548/548 [==============================] - 0s 52us/step - loss: 0.3267 - acc: 0.9617\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 4/20\n",
+      "548/548 [==============================] - 0s 45us/step - loss: 0.2338 - acc: 0.9726\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 5/20\n",
+      "548/548 [==============================] - 0s 54us/step - loss: 0.1860 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 6/20\n",
+      "548/548 [==============================] - 0s 61us/step - loss: 0.1382 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 7/20\n",
+      "548/548 [==============================] - 0s 47us/step - loss: 0.1295 - acc: 0.9726\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 8/20\n",
+      "548/548 [==============================] - 0s 50us/step - loss: 0.1161 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 9/20\n",
+      "548/548 [==============================] - 0s 41us/step - loss: 0.0968 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 10/20\n",
+      "548/548 [==============================] - 0s 44us/step - loss: 0.0990 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 11/20\n",
+      "548/548 [==============================] - 0s 53us/step - loss: 0.0968 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 12/20\n",
+      "548/548 [==============================] - 0s 39us/step - loss: 0.0965 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 13/20\n",
+      "548/548 [==============================] - 0s 51us/step - loss: 0.0892 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 14/20\n",
+      "548/548 [==============================] - 0s 54us/step - loss: 0.0843 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 15/20\n",
+      "548/548 [==============================] - 0s 46us/step - loss: 0.0894 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 16/20\n",
+      "548/548 [==============================] - 0s 44us/step - loss: 0.0718 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 17/20\n",
+      "548/548 [==============================] - 0s 47us/step - loss: 0.0845 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 18/20\n",
+      "548/548 [==============================] - 0s 47us/step - loss: 0.0746 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 19/20\n",
+      "548/548 [==============================] - 0s 45us/step - loss: 0.0743 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "Epoch 20/20\n",
+      "548/548 [==============================] - 0s 47us/step - loss: 0.0705 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "271/271 [==============================] - 0s 355us/step\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "[0.04499181849552092, 0.988929889298893]\n"
      ]
     }
    ],
    "source": [
-    "# generate lists of random integers and their sum\n",
-    "def random_sum_pairs(n_examples, n_numbers, largest):\n",
-    "    X, y = list(), list()\n",
-    "    for i in range(n_examples):\n",
-    "        in_pattern = [randint(1,largest) for _ in range(n_numbers)]\n",
-    "        out_pattern = sum(in_pattern)\n",
-    "        X.append(in_pattern)\n",
-    "        y.append(out_pattern)\n",
-    "    return X, y\n",
+    "model = Sequential()\n",
+    "model.add(keras.layers.Flatten(input_shape=(7, 3)))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
-    "X, y = random_sum_pairs(3, 2, 4)\n",
-    "print(X)\n",
-    "print(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['2+1', '1+3', '2+4']\n",
-      "['3', '4', '6']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# convert data to strings\n",
-    "def to_string(X, y, n_numbers, largest):\n",
-    "    max_length = n_numbers * ceil(log10(largest+1)) + n_numbers - 1\n",
-    "    Xstr = list()\n",
-    "    for pattern in X:\n",
-    "        strp = '+'.join([str(n) for n in pattern])\n",
-    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
-    "        Xstr.append(strp)\n",
-    "    max_length = ceil(log10(n_numbers * (largest+1)))\n",
-    "    ystr = list()\n",
-    "    for pattern in y:\n",
-    "        strp = str(pattern)\n",
-    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
-    "        ystr.append(strp)\n",
-    "    return Xstr, ystr\n",
+    "model.compile(loss='binary_crossentropy',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy'])\n",
     "\n",
-    "Xstr, ystr = to_string(X, y, 2, 4)\n",
-    "print(Xstr)\n",
-    "print(ystr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2, 10, 1], [1, 10, 3], [2, 10, 4]]\n",
-      "[[3], [4], [6]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# integer encode strings\n",
-    "def integer_encode(X, y, alphabet):\n",
-    "    char_to_int = dict((c, i) for i, c in enumerate(alphabet))\n",
-    "    Xenc = list()\n",
-    "    for pattern in X:\n",
-    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
-    "        Xenc.append(integer_encoded)\n",
-    "    yenc = list()\n",
-    "    for pattern in y:\n",
-    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
-    "        yenc.append(integer_encoded)\n",
-    "    return Xenc, yenc\n",
-    "\n",
-    "Xenc, yenc = integer_encode(Xstr, ystr, alphabet)\n",
-    "print(Xenc)\n",
-    "print(yenc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]]]\n",
-      "[[[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# one hot encode\n",
-    "def one_hot_encode(X, y, max_int):\n",
-    "    Xenc = list()\n",
-    "    for seq in X:\n",
-    "        pattern = list()\n",
-    "        for index in seq:\n",
-    "            vector = [0 for _ in range(max_int)]\n",
-    "            vector[index] = 1\n",
-    "            pattern.append(vector)\n",
-    "        Xenc.append(pattern)\n",
-    "    yenc = list()\n",
-    "    for seq in y:\n",
-    "        pattern = list()\n",
-    "        for index in seq:\n",
-    "            vector = [0 for _ in range(max_int)]\n",
-    "            vector[index] = 1\n",
-    "            pattern.append(vector)\n",
-    "        yenc.append(pattern)\n",
-    "    return Xenc, yenc\n",
-    "\n",
-    "Xenc, yenc = one_hot_encode(Xenc, yenc, len(alphabet))\n",
-    "print(Xenc)\n",
-    "print(yenc)"
+    "model.fit(X_train, y_train,\n",
+    "          epochs=20,\n",
+    "          batch_size=128)\n",
+    "score = model.evaluate(X_test, y_test, batch_size=128)\n",
+    "print(score)"
    ]
   },
   {
@@ -246,25 +186,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "seed(1)\n",
-    "n_samples = 1\n",
-    "n_numbers = 2\n",
-    "largest = 10\n",
-    "# generate pairs\n",
-    "X, y = random_sum_pairs(n_samples, n_numbers, largest)\n",
-    "print(X, y)\n",
-    "# convert to strings\n",
-    "X, y = to_string(X, y, n_numbers, largest)\n",
-    "print(X, y)\n",
-    "# integer encode\n",
-    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']\n",
-    "X, y = integer_encode(X, y, alphabet)\n",
-    "print(X, y)\n",
-    "# one hot encode\n",
-    "X, y = one_hot_encode(X, y, len(alphabet))\n",
-    "print(X, y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
