--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def dataset_size_bound(regex_max_length, string_max_length, alphabet, regex_chars):\n",
+    "def triple_count_bound(regex_max_length, string_max_length, alphabet, regex_chars):\n",
     "    \"\"\"Returns an upper bound on the size of a dataset generated with the same parameters\"\"\"\n",
     "    count_regexes = sum(len(alphabet + regex_chars) ** length for length in range(regex_max_length + 1))\n",
     "    count_strings = sum(len(alphabet) ** length for length in range(string_max_length + 1))\n",
@@ -144,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def dataset_generator(regex_max_length, string_max_length, alphabet, regex_chars):\n",
+    "def triple_generator(regex_max_length, string_max_length, alphabet, regex_chars):\n",
     "    \"\"\"Returns a generator that gives for every regex-string pair\n",
     "    up to a length whether or not they match\"\"\"\n",
     "    for regex in all_regexes(regex_max_length, alphabet + regex_chars):\n",
@@ -167,35 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('', False),\n",
-       " ('a', True),\n",
-       " ('b', False),\n",
-       " ('aa', True),\n",
-       " ('ab', False),\n",
-       " ('ba', False),\n",
-       " ('bb', False)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(regex_apply_all(re.compile(r'a|aa'), 2, \"ab\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -317,40 +289,29 @@
        " ('()', 'bb', False)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(dataset_generator(2, 2, \"ab\", \"|*()\"))"
+    "list(triple_generator(2, 2, \"ab\", \"|*()\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "810913069330"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset_size_bound(5, 10, \"abcde\", \"|*()\")"
+    "triple_count_bound(5, 15, \"ab\", \"|*\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -361,13 +322,13 @@
        "2214325"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(list(dataset_generator(2, 10, \"abc\", \"|*()\")))"
+    "len(list(triple_generator(2, 10, \"abc\", \"|*()\")))"
    ]
   },
   {
@@ -386,51 +347,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "max_regex_len = 2\n",
-    "max_string_len = 4\n",
-    "alphabet = \"ab\"\n",
-    "regex_chars = \"|*\""
+    "def integer_encode(X, char_to_int, max_len):\n",
+    "    Xenc = list()\n",
+    "    for pattern in X:\n",
+    "        pattern = pattern.ljust(max_len)\n",
+    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
+    "        Xenc.append(integer_encoded)\n",
+    "    return Xenc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def embed(string, embedding, length, pad_char):\n",
-    "    padded_string = string.ljust(length, pad_char)[:length]\n",
-    "    return [embedding[char] for char in padded_string]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pad_char = \"_\"\n",
-    "embedding = dict(map(reversed, enumerate(pad_char + alphabet + regex_chars)))\n",
-    "regexes, strings, labels = zip(*dataset_generator(max_regex_len, max_string_len, alphabet, regex_chars))\n",
-    "\n",
-    "X_r = np.array([embed(string, embedding, max_regex_len, pad_char) for string in regexes])\n",
-    "X_s = np.array([embed(string, embedding, max_string_len, pad_char) for string in strings])\n",
-    "y = np.array([int(b) for b in labels])"
+    "def one_hot_encode(X, alphabet_size):\n",
+    "    Xenc = list()\n",
+    "    for seq in X:\n",
+    "        pattern = list()\n",
+    "        for index in seq:\n",
+    "            vector = [0 for _ in range(alphabet_size)]\n",
+    "            if index != 0:\n",
+    "                vector[index - 1] = 1\n",
+    "            pattern.append(vector)\n",
+    "        Xenc.append(pattern)\n",
+    "    return Xenc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def generate_data(max_regex_len, max_string_len, alphabet, regex_chars):\n",
+    "    # embedding parameters\n",
+    "    pad_char = \" \"\n",
+    "    char_to_int = dict((c, i) for i, c in enumerate(pad_char + alphabet + regex_chars))\n",
+    "\n",
+    "    # generate dataset\n",
+    "    regexes, strings, labels = map(list, zip(*triple_generator(max_regex_len, max_string_len, alphabet, regex_chars)))\n",
+    "\n",
+    "    X_r = integer_encode(regexes, char_to_int, max_regex_len)\n",
+    "    X_s = integer_encode(strings, char_to_int, max_string_len)\n",
+    "\n",
+    "    X_r = one_hot_encode(X_r, len(alphabet + regex_chars)) # note, sets integer 0 to zero embedding\n",
+    "    X_s = one_hot_encode(X_s, len(alphabet))\n",
+    "    \n",
+    "    y = [int(b) for b in labels]\n",
+    "    \n",
+    "    X_r = np.array(X_r)\n",
+    "    X_s = np.array(X_s)\n",
+    "    y = np.array(y, ndmin=2).T\n",
+    "    \n",
+    "    return X_r, X_s, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# define problem\n",
+    "max_regex_len = 5\n",
+    "max_string_len = 15\n",
+    "alphabet = \"abc\"\n",
+    "regex_chars = \"|*\"\n",
+    "\n",
+    "X_r, X_s, y = generate_data(max_regex_len, max_string_len, alphabet, regex_chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
