--- a/code/KerasSandbox.ipynb
+++ b/code/KerasSandbox.ipynb
@@ -21,13 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sklearn.utils import shuffle\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout"
@@ -48,12 +49,17 @@
    },
    "outputs": [],
    "source": [
-    "def load_data(config, test_split = 0.2):\n",
+    "def load_data(config, balance=True):\n",
     "    print('Loading data...')\n",
     "    X_r = np.load(config + \"_X_r.npy\")\n",
     "    X_s = np.load(config + \"_X_s.npy\")\n",
     "    y = np.load(config + \"_y.npy\")\n",
     "    print('Data loaded.')\n",
+    "    \n",
+    "    if balance:\n",
+    "        print(\"Balancing...\")\n",
+    "        X_r, X_s, y = shuffle(X_r, X_s, y)\n",
+    "        #TODO get top count of 1s and 0s\n",
     "    return X_r, X_s, y"
    ]
   },
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -84,8 +90,18 @@
      "text": [
       "Loading data...\n",
       "Data loaded.\n",
-      "(819, 7, 3)\n",
-      "(819, 1)\n"
+      "(2468682, 15, 6)\n",
+      "(2468682, 1)\n",
+      "[[0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]]\n"
      ]
     }
    ],
@@ -100,12 +116,17 @@
     "print(X.shape)\n",
     "print(y.shape)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "X_train = X_train[0:10]\n",
+    "y_train = y_train[0:10]\n",
+    "X_test = X_test[0:1000]\n",
+    "y_test = y_test[0:1000]\n",
+    "print(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -115,55 +136,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "548/548 [==============================] - 1s 970us/step - loss: 0.7245 - acc: 0.5091\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 1s 81ms/step - loss: 0.7239 - acc: 0.5000\n",
       "Epoch 2/20\n",
-      "548/548 [==============================] - 0s 43us/step - loss: 0.4577 - acc: 0.8832\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 181us/step - loss: 0.6155 - acc: 0.8000\n",
       "Epoch 3/20\n",
-      "548/548 [==============================] - 0s 52us/step - loss: 0.3267 - acc: 0.9617\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 292us/step - loss: 0.5553 - acc: 0.7000\n",
       "Epoch 4/20\n",
-      "548/548 [==============================] - 0s 45us/step - loss: 0.2338 - acc: 0.9726\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 248us/step - loss: 0.4118 - acc: 1.0000\n",
       "Epoch 5/20\n",
-      "548/548 [==============================] - 0s 54us/step - loss: 0.1860 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 213us/step - loss: 0.4819 - acc: 1.0000\n",
       "Epoch 6/20\n",
-      "548/548 [==============================] - 0s 61us/step - loss: 0.1382 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 459us/step - loss: 0.4370 - acc: 0.9000\n",
       "Epoch 7/20\n",
-      "548/548 [==============================] - 0s 47us/step - loss: 0.1295 - acc: 0.9726\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 506us/step - loss: 0.3723 - acc: 0.9000\n",
       "Epoch 8/20\n",
-      "548/548 [==============================] - 0s 50us/step - loss: 0.1161 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 448us/step - loss: 0.3243 - acc: 1.0000\n",
       "Epoch 9/20\n",
-      "548/548 [==============================] - 0s 41us/step - loss: 0.0968 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 229us/step - loss: 0.3454 - acc: 0.9000\n",
       "Epoch 10/20\n",
-      "548/548 [==============================] - 0s 44us/step - loss: 0.0990 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 220us/step - loss: 0.3799 - acc: 0.9000\n",
       "Epoch 11/20\n",
-      "548/548 [==============================] - 0s 53us/step - loss: 0.0968 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 260us/step - loss: 0.2360 - acc: 1.0000\n",
       "Epoch 12/20\n",
-      "548/548 [==============================] - 0s 39us/step - loss: 0.0965 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 263us/step - loss: 0.2973 - acc: 1.0000\n",
       "Epoch 13/20\n",
-      "548/548 [==============================] - 0s 51us/step - loss: 0.0892 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 260us/step - loss: 0.3116 - acc: 1.0000\n",
       "Epoch 14/20\n",
-      "548/548 [==============================] - 0s 54us/step - loss: 0.0843 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 247us/step - loss: 0.3000 - acc: 1.0000\n",
       "Epoch 15/20\n",
-      "548/548 [==============================] - 0s 46us/step - loss: 0.0894 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 429us/step - loss: 0.2194 - acc: 1.0000\n",
       "Epoch 16/20\n",
-      "548/548 [==============================] - 0s 44us/step - loss: 0.0718 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 436us/step - loss: 0.2296 - acc: 1.0000\n",
       "Epoch 17/20\n",
-      "548/548 [==============================] - 0s 47us/step - loss: 0.0845 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 259us/step - loss: 0.1942 - acc: 1.0000\n",
       "Epoch 18/20\n",
-      "548/548 [==============================] - 0s 47us/step - loss: 0.0746 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 304us/step - loss: 0.1355 - acc: 1.0000\n",
       "Epoch 19/20\n",
-      "548/548 [==============================] - 0s 45us/step - loss: 0.0743 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "10/10 [==============================] - 0s 214us/step - loss: 0.1709 - acc: 1.0000\n",
       "Epoch 20/20\n",
-      "548/548 [==============================] - 0s 47us/step - loss: 0.0705 - acc: 0.9745\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "271/271 [==============================] - 0s 355us/step\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
-      "[0.04499181849552092, 0.988929889298893]\n"
+      "10/10 [==============================] - 0s 199us/step - loss: 0.1871 - acc: 1.0000\n",
+      "1000/1000 [==============================] - 0s 242us/step\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "[0.20742215871810912, 0.9960000023841858]\n"
      ]
     }
    ],
    "source": [
     "model = Sequential()\n",
-    "model.add(keras.layers.Flatten(input_shape=(7, 3)))\n",
-    "model.add(Dense(64, activation='relu'))\n",
-    "model.add(Dropout(0.5))\n",
+    "model.add(keras.layers.Flatten(input_shape=(15, 6)))\n",
+    "#model.add(Dense(64, activation='relu'))\n",
+    "#model.add(Dropout(0.5))\n",
     "model.add(Dense(64, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
