--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +289,7 @@
        " ('()', 'bb', False)]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,18 +300,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89455275"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "triple_count_bound(5, 15, \"ab\", \"|*\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +333,7 @@
        "2214325"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -416,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -424,16 +435,16 @@
    "source": [
     "# define problem\n",
     "max_regex_len = 5\n",
-    "max_string_len = 15\n",
-    "alphabet = \"abc\"\n",
-    "regex_chars = \"|*\"\n",
+    "max_string_len = 10\n",
+    "alphabet = \"ab\"\n",
+    "regex_chars = \"|*()\"\n",
     "\n",
     "X_r, X_s, y = generate_data(max_regex_len, max_string_len, alphabet, regex_chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -444,6 +455,24 @@
     "np.save(config + \"_X_s\", X_s)\n",
     "np.save(config + \"_y\", y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6638\n",
+      "(2468682, 1)\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -460,18 +489,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
   }
  },
  "nbformat": 4,
