--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -458,7 +458,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regex = re.compile(r'(a)\\1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -467,12 +478,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6638\n",
-      "(2468682, 1)\n"
+      "['a', 'b', '', 'c']\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(regex.findall(\"1aaaa3bbb45c\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', 'wo', 'words']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'^|\\w+', 'two words')"
+   ]
   },
   {
    "cell_type": "code",
@@ -489,18 +523,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
   }
  },
  "nbformat": 4,
